--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="leaderboard">LEADERBOARD</string>
     <string name="submit">SUBMIT</string>
+    <string name="yes">YES</string>
 </resources>
